<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:background="#F5F6FA"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:src="@drawable/ic_launcher_logo" />

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/innerBurger"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_burger"
                android:tint="#162975" />

            <TextView
                android:id="@+id/innerTextCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/t_t_category"
                android:textColor="#162975"
                android:textSize="16sp"
                tools:ignore="UseCompatTextViewDrawableXml" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:src="@drawable/heart"
                android:tint="#162975" />

            <TextView
                android:id="@+id/favorites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/favorites"
                android:textColor="#162975"
                android:textSize="16sp"
                tools:ignore="UseCompatTextViewDrawableXml" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/draverRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_smiley"
                android:tint="#162975" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/rate_the_application"
                android:textColor="#162975"
                android:textSize="16sp"
                tools:ignore="UseCompatTextViewDrawableXml" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:src="@drawable/info"
                android:tint="#162975" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/about"
                android:textColor="#162975"
                android:textSize="16sp"
                tools:ignore="UseCompatTextViewDrawableXml" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>